--- a/03/index.html
+++ b/03/index.html
@@ -27,7 +27,10 @@
       import { OrbitControls } from 'three/addons/controls/OrbitControls.js';      
 
       var renderer, controls, scene, camera;
-      let LASTOBJECT = NULL;
+      let zoom = false;
+      let LASTOBJECT = null;
+      let DELTA = 0;
+      const factor = 0.05;
 
       window.onload = function() {
 
@@ -51,6 +54,7 @@
 
         renderer.domElement.onmouseup = function () {
             controls.enabled = true;
+            zoom = false;
         };
 
         renderer.domElement.onmousedown = function( e ){
@@ -58,8 +62,9 @@
             if (!e.shiftKey){
               return;
             }
-            
+
             controls.enabled = false;
+            zoom = true;
 
             console.log('Yay! We clicked!');
 
@@ -93,9 +98,27 @@
             torus_new.material.color.setHex( 0xff69b4 );
             scene.add(torus_new);
             // console.log(intersects.length);
+            LASTOBJECT = torus_new;
+            zoom = true;
+
           };
 
-
+          renderer.domElement.onmousemove = function( e ){
+            if(!zoom){
+              return;
+            }
+            if(!LASTOBJECT){
+              return;
+            }
+            if (e.movementY < 0){
+              DELTA = factor;
+            } else if (e.movementY > 0){
+              DELTA = -factor;
+            }
+            LASTOBJECT.scale.set(LASTOBJECT.scale.x + DELTA,
+                                 LASTOBJECT.scale.y + DELTA,
+                                 LASTOBJECT.scale.z + DELTA);
+          }
         // setup lights
         var ambientLight = new THREE.AmbientLight();
         scene.add( ambientLight );
