Made the wireframe functionality

--- a/03/index.html
+++ b/03/index.html
@@ -64,7 +64,7 @@
         renderer.domElement.onmousedown = function( e ){
 
             if (!e.shiftKey){
-              console.log("Shift key Presedddd!!!!");
+              console.log("Shift key Presssedddd!!!!");
               return;
             }
 
