--- a/03/index.html
+++ b/03/index.html
@@ -100,7 +100,7 @@
           // NEW torus *knot* — starts PINK, can flip to GREEN while scaling
           var g = new THREE.TorusKnotGeometry(12, 3.5, 60, 20);
           var m = new THREE.MeshStandardMaterial({
-            color: 0xFF69B4,               // start PINK
+            color: 0xFF69B4,               
             wireframe: !!wireFLAG,
             metalness: 0.2, roughness: 0.6,
             transparent:true, opacity:1
